# vista

./: .clang-format  .gitignore  CLA.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
VistaCoreLibs/: BUILDINFO  CMakeLists.txt  README
VistaCoreLibs/Documentation/: Doxyfile
VistaCoreLibs/ImageTest/: CMakeLists.txt  _SourceFiles.cmake  checker.tga  main.cpp  oculus.frag  test.tga  testshader.frag  testshader.vert  testshader_stereo.frag
VistaCoreLibs/Tests/: CMakeLists.txt  VistaBase64Test.cpp  VistaConversionTest.cpp  VistaGenericFactoryTest.cpp  VistaHistoryProjectNodeTest.cpp  VistaMathBasicsTest.cpp  VistaReflectionableTest.cpp  VistaSensorMeasureTest.cpp  VistaSerializablesTest.cpp  VistaTestDriver.cpp  VistaTestDriver.h  VistaTestRotations.h  VistaTestingUtilsTest.cpp  VistaVector3DTest.cpp
VistaCoreLibs/VistaAspects/: CMakeLists.txt  Doxyfile  VistaAspectsConfig.h  VistaAspectsMain.cpp  VistaAspectsUtils.cpp  VistaAspectsUtils.h  VistaConversion.cpp  VistaConversion.h  VistaDeSerializer.cpp  VistaDeSerializer.h  VistaExplicitCallbackInterface.cpp  VistaExplicitCallbackInterface.h  VistaGenericFactory.h  VistaLocatable.cpp  VistaLocatable.h  VistaMarshalledObjectFactory.cpp  VistaMarshalledObjectFactory.h  VistaNameable.cpp  VistaNameable.h  VistaObjectRegistry.cpp  VistaObjectRegistry.h  VistaObserveable.cpp  VistaObserveable.h  VistaObserver.cpp  VistaObserver.h  VistaProperty.cpp  VistaProperty.h  VistaPropertyAwareable.cpp  VistaPropertyAwareable.h  VistaPropertyFunctor.cpp  VistaPropertyFunctor.h  VistaPropertyFunctorRegistry.cpp  VistaPropertyFunctorRegistry.h  VistaPropertyList.cpp  VistaPropertyList.h  VistaReferenceCountable.cpp  VistaReferenceCountable.h  VistaReflectionable.cpp  VistaReflectionable.h  VistaSerializable.cpp  (+14 more)
VistaCoreLibs/VistaBase/: CMakeLists.txt  Doxyfile  LICENSE.LESSER  VistaAtomicCounter.cpp  VistaAtomicCounter.h  VistaAutoBuffer.cpp  VistaAutoBuffer.h  VistaAutoBufferPool.cpp  VistaAutoBufferPool.h  VistaBaseConfig.h  VistaBaseMain.cpp  VistaBaseTypes.h  VistaColor.cpp  VistaColor.h  VistaDefaultTimerImp.cpp  VistaDefaultTimerImp.h  VistaExceptionBase.cpp  VistaExceptionBase.h  VistaMathBasics.h  VistaQuaternion.cpp  VistaQuaternion.h  VistaReferenceFrame.cpp  VistaReferenceFrame.h  VistaSerializingToolset.cpp  VistaSerializingToolset.h  VistaStreamManager.cpp  VistaStreamManager.h  VistaStreamUtils.cpp  VistaStreamUtils.h  VistaTimeUtils.cpp  VistaTimeUtils.h  VistaTimer.cpp  VistaTimer.h  VistaTimerImp.cpp  VistaTimerImp.h  VistaTransformMatrix.cpp  VistaTransformMatrix.h  VistaUtilityMacros.h  VistaVector3D.h  VistaVectorMath.h  (+4 more)
VistaCoreLibs/VistaDataFlowNet/: CMakeLists.txt  Vdfn3DNormalizeNode.cpp  Vdfn3DNormalizeNode.h  VdfnAbsoluteNode.h  VdfnActionNode.cpp  VdfnActionNode.h  VdfnActionObject.cpp  VdfnActionObject.h  VdfnAggregateNode.h  VdfnApplyTransformNode.cpp  VdfnApplyTransformNode.h  VdfnAxisRotateNode.cpp  VdfnAxisRotateNode.h  VdfnBinaryOpNode.h  VdfnBinaryOps.h  VdfnChangeDetectNode.h  VdfnCompose3DVectorNode.cpp  VdfnCompose3DVectorNode.h  VdfnComposeQuaternionFromDirectionsNode.cpp  VdfnComposeQuaternionFromDirectionsNode.h  VdfnComposeQuaternionNode.cpp  VdfnComposeQuaternionNode.h  VdfnComposeTransformMatrixNode.cpp  VdfnComposeTransformMatrixNode.h  VdfnCompositeNode.cpp  VdfnCompositeNode.h  VdfnConditionalRouteNode.cpp  VdfnConditionalRouteNode.h  VdfnConfig.h  VdfnConstantValueNode.h  VdfnCounterNode.h  VdfnDecompose3DVectorNode.cpp  VdfnDecompose3DVectorNode.h  VdfnDecomposeQuaternionNode.cpp  VdfnDecomposeQuaternionNode.h  VdfnDecomposeTransformMatrixNode.cpp  VdfnDecomposeTransformMatrixNode.h  VdfnDelayNode.h  VdfnDemultiplexNode.h  VdfnDifferenceNode.h  (+81 more)
VistaCoreLibs/VistaDeviceDrivers/: CMakeLists.txt  VistaDeviceDriversPage.h
VistaCoreLibs/VistaDeviceDriversBase/: CMakeLists.txt  VistaConnectionUpdater.cpp  VistaConnectionUpdater.h  VistaDeviceDriver.cpp  VistaDeviceDriver.h  VistaDeviceDriversConfig.h  VistaDeviceSensor.cpp  VistaDeviceSensor.h  VistaDriverMain.cpp  VistaDriverManager.cpp  VistaDriverManager.h  VistaDriverMap.cpp  VistaDriverMap.h  VistaDriverPlugDev.h  VistaDriverUtils.cpp  VistaDriverUtils.h  VistaSensorReadState.cpp  VistaSensorReadState.h  VistaSensorReader.cpp  VistaSensorReader.h  _SourceFiles.cmake  precompiled.pch
VistaCoreLibs/VistaInterProcComm/: CMakeLists.txt  Doxyfile  VistaInterProcCommConfig.h  _SourceFiles.cmake  precompiled.pch
VistaCoreLibs/VistaKernel/: CMakeLists.txt  Doxyfile  LICENSE  LICENSE.LESSER  VistaDriverPropertyConfigurator.cpp  VistaDriverPropertyConfigurator.h  VistaFrameLoop.cpp  VistaFrameLoop.h  VistaKernelConfig.h  VistaKernelMsgPort.cpp  VistaKernelMsgPort.h  VistaKernelMsgTab.h  VistaSystem.cpp  VistaSystem.h  VistaSystemClassFactory.h  VistaSystemCommands.cpp  VistaSystemCommands.h  VistaSystemConfigurators.cpp  VistaSystemConfigurators.h  _SourceFiles.cmake  _kommentare.cpp.txt  precompiled.pch
VistaCoreLibs/VistaKernelOpenSGExt/: CMakeLists.txt  Doxyfile  LICENSE  VistaKernelOpenSGExtConfig.h  VistaOpenSGGeometryTools.cpp  VistaOpenSGGeometryTools.h  VistaOpenSGGraphicsStatsOverlay.cpp  VistaOpenSGGraphicsStatsOverlay.h  VistaOpenSGHaloShader.cpp  VistaOpenSGHaloShader.h  VistaOpenSGMaterialTools.cpp  VistaOpenSGMaterialTools.h  VistaOpenSGModelOptimizer.cpp  VistaOpenSGModelOptimizer.h  VistaOpenSGMultiMaterial.cpp  VistaOpenSGMultiMaterial.h  VistaOpenSGMultiMaterialShaderCreator.cpp  VistaOpenSGMultiMaterialShaderCreator.h  VistaOpenSGNormalMapMaterial.cpp  VistaOpenSGNormalMapMaterial.h  VistaOpenSGNormalMapMaterialShaders.cpp  VistaOpenSGParticleManager.cpp  VistaOpenSGParticleManager.h  VistaOpenSGParticleManagerParticleChanger.cpp  VistaOpenSGParticleManagerParticleChanger.h  VistaOpenSGParticles.cpp  VistaOpenSGParticles.h  VistaOpenSGPerMaterialShader.cpp  VistaOpenSGPerMaterialShader.h  VistaOpenSGPhongShader.cpp  VistaOpenSGPhongShader.h  VistaOpenSGShadow.cpp  VistaOpenSGShadow.h  VistaOpenSGSkybox.cpp  VistaOpenSGSkybox.h  VistaOpenSGTextureLoader.cpp  (+7 more)
VistaDemo/: BUILDINFO  CMakeLists.txt  README
(+1548 files in other folders)
